# src/api/Request/IRequest.ts
@@ -1,9 +1,15 @@
 import { IBaseInterface } from "../baseInterface";
 
+export interface IRequests extends IBaseInterface {
+  requests: IRequest[];
+}
+
 export interface IRequest extends IBaseInterface {
-  item: any;
-  qty_required: any;
-  qty_approved: any;
-  qty_issued: any;
+  item: string;
+  qty_required: string;
+  purpose: string;
+  qty_approved: string;
+  comment: string;
+  qty_issued: string;
   status: any;
 }
