# src/api/Request/requestValidation.ts
@@ -1,7 +1,18 @@
 import Joi from "joi";
-import { IRequest } from "./IRequest";
 
-export const DivisionValidationSchema = Joi.object().keys(<IRequest>{
-  item: Joi.string().required(),
-  qty_required: Joi.string().required(),
+export const IctValidationSchema = Joi.object().keys({
+  qty_approved: Joi.string().required(),
+  comment: Joi.string().allow(""),
+});
+
+export const StoreValidationSchema = Joi.object().keys({
+  qty_issued: Joi.string().required(),
+});
+
+export const RequestValidationSchema = Joi.object().keys({
+  requests: Joi.array().items({
+    item: Joi.string().required(),
+    qty_required: Joi.string().required(),
+    purpose: Joi.string().allow(""),
+  }),
 });
